fix: whitelist production frontend URL in CORS config